# psdf-suction-python

./: .gitignore  README.md  pyproject.toml
psdf_suction/: configs.py  psdf.py  utils.py
src/psdf_suction/: psdf.py  utils.py
src/psdf_suction/analyser/: vacuum_cup_analyser.py
tests/: test_run.py
